<resources>
    <string name="app_name">PushButton</string>
    <string name="push_button">Push Button</string>
    <string name="hello_message">Hello World</string>
    <string name="you_win_click_one_more_time_for_the_next_level">You WIN! Reach 20 presses for the next level</string>
    <string name="menu">Menu</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="level_6">Level 6</string>
    <string name="level_7">Level 7</string>
    <string name="level_8">Level 8</string>
    <string name="level_9">Level 9</string>
    <string name="level_10">Level 10</string>
    <string name="level_11">Level 11</string>
    <string name="button">Button</string>
    <string name="button1">Button 1</string>
    <string name="button2">Button 2</string>
    <string name="button3">Button 3</string>
    <string name="button4">Button 4</string>
    <string name="button5">Button 5</string>
    <string name="button6">Button 6</string>
    <string name="button7">Button 7</string>
    <string name="button8">Button 8</string>
    <string name="button9">Button 9</string>
    <string name="button_level4">PRESS ME</string>
    <string name="getMeHere">==============================================\n                 GET ME HERE</string>
    <string name="_0_5">0/5</string>
    <string name="holdButton">Hold</string>
    <string name="timer">00:00</string>
    <string name="reveal_switch_label">Reveal pegi-18 content</string>
    <string name="ing_vodka">37 1/2 ml Vodka</string>
    <string name="ing_coffee_liq"> 25 ml Coffee Liqueur</string>
    <string name="ing_cream">15 ml Cream</string>
    <string name="ing_milk">15 ml Milk</string>
    <string name="ing_choc_powder">Chocolate Powder</string>
    <string name="ing_coffee_bean">Coffee Bean</string>
    <string name="ing_ice">Ice</string>
    <string name="ing_wrong_rum">10 ml Rum</string>
    <string name="ing_wrong_olives">2 Olives</string>
    <string name="cocktail_progress">0 %</string>
    <string name="white_russian">white russian</string>
    <string name="message_label">Message</string>
    <string name="send_button">Send</string>
    <string name="message">Message</string>
    <string name="response">Response:</string>
    <string name="patience">Patience</string>
    <string name="randomstring">AshsbjWbsyE76S0oyOmmq23MsgEE24</string>
</resources>