<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">


    <Button
        android:id="@+id/level_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10sp"
        android:onClick="level1"
        android:text="@string/level_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/level_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10sp"
        android:onClick="level2"
        android:text="@string/level_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/level_1" />

    <Button
        android:id="@+id/level_3"
        android:onClick="level3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/level_3"
        app:layout_constraintTop_toBottomOf="@+id/level_2"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="24dp" />

    <Button
        android:id="@+id/level_4"
        android:onClick="level4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/level_4"
        app:layout_constraintTop_toBottomOf="@+id/level_3"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="24dp" />

    <Button
        android:id="@+id/level_5"
        android:onClick="level5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/level_5"
        app:layout_constraintTop_toBottomOf="@+id/level_4"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="24dp" />

    <Button
        android:id="@+id/level_6"
        android:onClick="level6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/level_6"
        app:layout_constraintTop_toBottomOf="@+id/level_5"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="24dp" />

    <Button
        android:id="@+id/level_7"
        android:onClick="level7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/level_7"
        app:layout_constraintTop_toBottomOf="@+id/level_6"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="24dp" />

    <Button
        android:id="@+id/level_8"
        android:onClick="level8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/level_8"
        app:layout_constraintTop_toBottomOf="@+id/level_7"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="24dp" />

    <Button
        android:id="@+id/level_9"
        android:onClick="level9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/level_9"
        app:layout_constraintTop_toBottomOf="@+id/level_8"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="24dp" />

    <Button
        android:id="@+id/level_10"
        android:onClick="level10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/level_10"
        app:layout_constraintTop_toBottomOf="@+id/level_9"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteX="25dp" />



</androidx.constraintlayout.widget.ConstraintLayout>