<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/Lv2Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/level_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="120dp"
        android:layout_height="75dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:onClick="pressButton1"
        android:text="@string/button1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="120dp"
        android:layout_height="75dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:onClick="pressButton2"
        android:text="@string/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="120dp"
        android:layout_height="75dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:onClick="pressButton3"
        android:text="@string/button3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_1" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="120dp"
        android:layout_height="75dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:onClick="pressButton4"
        android:text="@string/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_2" />
</androidx.constraintlayout.widget.ConstraintLayout>