<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity5">

    <TextView
        android:id="@+id/lv5Title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_view_countdown"
        android:layout_marginBottom="180sp"
        android:layout_centerHorizontal="true"
        android:text="@string/level_5"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/timer"
        android:textColor="@android:color/black"
        android:textSize="60sp" />

    <Button
        android:id="@+id/holdButton"
        android:layout_width="121dp"
        android:layout_height="66dp"
        android:layout_below="@+id/text_view_countdown"
        android:layout_marginTop="5sp"
        android:layout_centerHorizontal="true"
        android:text="@string/holdButton" />


</RelativeLayout>